[tool.poetry]
name = "jailbreak-bot"
version = "0.1.0"
description = ""
authors = ["Pooria Azami <pooriaazami@gmail.com>"]
readme = "README.md"
packages = [{include = "jailbreak_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^22.1"
python-dotenv = "^1.1.0"
langchain = {extras = ["full"], version = "^0.3.25"}
langgraph = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
